src/test/ui/associated-types/cache/project-fn-ret-contravariant.transmute.nll.stderr
error: unsatisfied lifetime constraints
  --> $DIR/project-fn-ret-contravariant.rs:48:4
   |
LL | fn baz<'a,'b>(x: &'a u32) -> &'static u32 {
   |        -- lifetime `'a` defined here
LL |    bar(foo, x) //[transmute]~ ERROR E0495
   |    ^^^^^^^^^^^ returning this value requires that `'a` must outlive `'static`

error: aborting due to previous error

